--- a/README
+++ b/README
@@ -1,4 +1,16 @@
 History: Revise chapter 5 and 8, learn 7 and 6
+Start with essay questions first. 
+Four types of SBQ: inference, message, purpose, evaluation
+For Evaluation questions write down wether the sources support or don't support beside each source first.
+Also make sure to have at least one agree and one disagree paragraph first because the marking scheme requires you to have at least one agree and one disagree
+
+Answer for the practice question:
+Source E supports the view as it shows that members of the UMNO party were at fault for causing the separation. Source E states that, "The inflammatory communal and racial speeches made by Malaysian Umno leaders worked up Malay sentiments in Singapore." This shows that the UMNO leaders caused relations between Malays and other races in singapore to be strained, resulting in the riots that caused the separations. 
+
+Source C does not support this view as it shows that both parties represented by the PAP and UMNO were at fault for the separation. Source C shows Tunku Abdul Rahman and Lee Kuan Yew hugging each other in unity but backstabbing each other with knives. This indicates that both leaders betrayed each other knowing that they would separate eventuallly, showing how boht parties were responssible for separation. 
+
+THe Straits Times reader drew this cartoon to convince the Singapore locals that the British Military Administration (BMA) was corrupted and unreliable. This was to ensure that the people in Singapore would not listen to the demands of the BMA and reduce their eating of rice. This was also to make sure that the people would not support the BMA. This is shown bt the cartoon which depicts the BMA as a king who controls the black market and is calling for the reduction of rice rations in order to benefit from black market profits. By reducing rice rations, it would make people dependent on the black market and essentially, the BMA. This was evident in the context of post-war Singapore where BMA was corrupted and controlled the black market.
+
 
 Geography: 
 Questions that probably will be tested/ rmb to learn:
@@ -10,7 +22,7 @@ Residents and community Groups *must learn
 Foreign Investors and multinational Corporations *must learn
 "Public housing refers to government efforts to provide housing units with basic services, usually for low-income households and other persons of need such as the elderly and disabled." -Provision of Public Housing *must learn
 -> public housing is governement efforts to provide more housing with basic services, mostly for low-income households, elderly and disabled
-Learn about LTA and HDB 
+***Learn about LTA and HDB
 if have time learn URA and SFA (singapore food authority)
 Transportation of good and services under (I think LTA) *will be tested
 
@@ -38,8 +50,11 @@ Notes from consultation:
 Roads - comprehensive network of transport:
 -allows people/things to move within the estate over shorter distance and shorter time at ease 
 -allows people/things to move in and out of the estate
+
+**
 Because things are so connected, people walk around more and leave vehicles
--> less vehicles on roads -> less carbon footprint
+-> less vehicles on roads ->less reliant on the utilisation of fossil fuels, less carbon footprints
+**
 
 Government subsidises a lot for buying of flats 
 
@@ -62,5 +77,51 @@ Many different types of houses that caters to different social classes (singles,
 eco-friendly living -> under factor 3: environmental features in buildings (will DEFINITELY come out)
 if see summary on the slide die die MUST LEARN
 
-Add in quota of EIP
-talk about EASE version 1 having ramp then EASE version 2 having slip mats and grab bars
+ESSAY WRITING:
+*EIP and inter-generational facilities won't come out for essay question anymore*
+
+Always have 4 paragraphs:
+1. Introduction <br>*4
+    - State your stand to the arguement (suggested to write agree)
+    - Provide key definition words 
+2. Peeel (body) <br>*4
+3. Peeel (body) <br>*4
+4. Conclusion 
+
+Keywords for the essay practice:
+- community inclusiveness, promote interactions
+- different groups of people
+    - the young, adults, the elderly
+    - WCB, VIP, PW, BIP
+    - Ethnic groups: C, M, I, E
+
+Given Factor 1:
+EIP are policies that hDB has put in place to encourage a mix of residents across different ethnicities in its HDB estates (P). Singapore is made up of residents from 4 key ethnic groups such as Chinese, Malays, Indians, and others according to the 2020 population census. Due to this ethnic proportion, the EIP would designate the proportion of flats in the HDB estate according to the ethnic demography of Singapore. (EL/EX) For example, only about 70% of flats will be allocated to Chinese households. This prevents one ethnic group from dominating the HDB estate. With residents of all age groups to mingle with each other when the opportunities for residents of all age groups to mingle with each other when they meet along the corridors, or have gatherings during each ethnic group's major festivities and study in nearby schools. (EV) Hence, these interactions aim to foster community inclusiveness. 
+
+Given Factor 2:
+However, in my opinion, I feel that building inter-generational facilities is more important to promote community inclusiveness. Inter-generational facilities could include a common activity area that can be used by both the elderly and young children. (EL/EX) For example, merry-go-round play areas in Jurong West were built to allow both young children and elderly who may be wheel-chair bound to play together. (EX/EV) Additionally, the decision to bild child-care centresm primary schools next to elder-care facilities such as Princess Elizabeth Primary School is built just next to St Luke's Hospital within the Butik Batok west estate. (EX/EV) Hencem the close proximity of these amenities are important to foster community inclusiveness as there are opportunities for students to do service learning and interact with the elderly. (L)
+
+Conclusion: 
+In conclusion, I feel that building inter-generational facilities is more important than implementing the EIP. The EIP is but only a policy. If residents do not wish to interact with their neighbours, ti will be difficult to encourage and promote community inclusiveness. Many Singaporeans today spend a lot of their day time at school or at work. When they arrive at home, their front doors remain closed. Hence, many have observed the dilution of the Kampung Spirit compared to yester-years. Moreover, the EIp can be a once-off rule when residents purchase their flats and they do not live out the intent of the Eip to interact with others on a daily basis. The use of inter-generational facilities can be on a daily basis, for the duration which the residents are there can be at least a few years. Hence, these daily interactinos that span 
+
+Possible criterias to consider:
+1. Quality of life -> *suggested to use this*
+think about how each strategy affects the quality of life for residents. Does one approah improve the overall well-being and comfort of people more effectively
+2. Community engagement
+Consider which strategy promotes better interactions and engagement among residents. Does one approach lead to a stronger sense of community and social connections?
+3. Resources (government fundings)
+The governement has limited resources. Which stratey is more efficient in terms of 
+4. Long term sustainability
+5. Feedback from residents
+
+Whole Idea of HDB is that they want to have inclusive housing:
+- having different amenities in the area is part of incusive housing 
+- amenities and facilities under void decks such as childcare, schools, eldercare, foodcourts, kopitiam, mrt, bus stations
+    -> this planning is in charge of HDB, URA and LTA (HDB and URA for the land planning while LTA plans out the roads)
+    -> BUBBLE TEA (people, groups and services)
+    -> facilities and amenitites for all ages
+
+Stakeholders:
+- public
+- private
+- government
